Set dynamic size for the menu

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <div class="circle-menu">
   <div class="circle-menu__item-container">
     <div class="circle-menu__item circle-menu__item_top-left">
-      <span class="circle-menu__text circle-menu__text_top">я&nbsp;исчезаю</span>
-      <span class="circle-menu__text circle-menu__text_top circle-menu__text_hidden">здесь пусто</span>
+      <span class="circle-menu__text circle-menu__text_top circle-menu__text_left-width">я&nbsp;исчезаю</span>
+      <span class="circle-menu__text circle-menu__text_top circle-menu__text_left-width circle-menu__text_hidden">здесь пусто</span>
     </div>
     <div class="circle-menu__item circle-menu__item_bottom-left">
-      <span class="circle-menu__text circle-menu__text_bottom">я&nbsp;градиент</span>
+        <span class="circle-menu__text circle-menu__text_bottom circle-menu__text_left-width">я&nbsp;градиент</span>
     </div>
   </div>
   <div class="circle-menu__item-container">
