--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 <body>
 <div class="circle-menu">
   <div class="circle-menu__item-container">
-    <div class="circle-menu__item circle-menu__item_top-left">
+    <a href="#" class="circle-menu__item circle-menu__item_top-left">
       <span class="circle-menu__text circle-menu__text_top circle-menu__text_left-width">я&nbsp;исчезаю</span>
       <span class="circle-menu__text circle-menu__text_top circle-menu__text_left-width circle-menu__text_hidden">здесь пусто</span>
-    </div>
-    <div class="circle-menu__item circle-menu__item_bottom-left">
-        <span class="circle-menu__text circle-menu__text_bottom circle-menu__text_left-width">я&nbsp;градиент</span>
-    </div>
+    </a>
+    <a href="#" class="circle-menu__item circle-menu__item_bottom-left">
+      <span class="circle-menu__text circle-menu__text_bottom circle-menu__text_left-width">я&nbsp;градиент</span>
+    </a>
   </div>
   <div class="circle-menu__item-container">
-    <div class="circle-menu__item circle-menu__item_top-right">
+    <a href="#" class="circle-menu__item circle-menu__item_top-right">
       <span class="circle-menu__text circle-menu__text_top">прыжок!</span>
-    </div>
+    </a>
     <div class="circle-menu__item_bottom-right circle-menu__item">
       <span class="circle-menu__text circle-menu__text_bottom">а&nbsp;я&nbsp;меню</span>
       <ul class="circle-menu__item-list">
-        <li class="circle-menu__item-list-element"><span class="circle-menu__item-menu-text">Пункт&nbsp;1</span></li>
-        <li class="circle-menu__item-list-element"><span class="circle-menu__item-menu-text">Пункт&nbsp;2</span></li>
-        <li class="circle-menu__item-list-element"><span class="circle-menu__item-menu-text">Пункт&nbsp;3</span></li>
-        <li class="circle-menu__item-list-element"><span class="circle-menu__item-menu-text">Пункт&nbsp;4</span></li>
+        <li class="circle-menu__item-list-element"><a href="#" class="circle-menu__item-menu-text">Пункт&nbsp;1</a></li>
+        <li class="circle-menu__item-list-element"><a href="#" class="circle-menu__item-menu-text">Пункт&nbsp;2</a></li>
+        <li class="circle-menu__item-list-element"><a href="#" class="circle-menu__item-menu-text">Пункт&nbsp;3</a></li>
+        <li class="circle-menu__item-list-element"><a href="#" class="circle-menu__item-menu-text">Пункт&nbsp;4</a></li>
       </ul>
     </div>
   </div>
